--- a/estilos.css
+++ b/estilos.css
@@ -8,7 +8,6 @@
 }
 
 
-
 h1 {
     color: #fff;
     font-family: courier;
@@ -26,8 +25,6 @@ h2 {
 
 
 
-
-
 #footer {
     padding: 30px;
     text-align: center;
@@ -38,7 +35,7 @@ h2 {
 
     #footer a {
         color: lightgrey;
-        font-style: none;
+        font-style:unset;
     }
 
     #footer ul {
@@ -122,7 +119,8 @@ nav {
 }
 
 #menu_lista {
-    display: inline-flex;
+    display:inline-flex;
+    
 }
 
 #cuerpo ul {
@@ -144,11 +142,13 @@ nav {
 }
 
 .menu_lista {
-    margin-top: 30px;
+    margin-top: 0px;
     font-size: 25px;
     color: white;
 }
 
 .menu_lista_item {
-    padding-bottom: 10px;
+    padding-left: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
