--- a/estilos.css
+++ b/estilos.css
@@ -119,7 +119,9 @@ nav {
     height: 100%;
     justify-content: center;
     display: inline-block;
+
 }
+
 
 #menu_lista {
     display:inline-flex;
@@ -155,3 +157,51 @@ nav {
     padding-top: 0px;
     padding-bottom: 0px;
 }
+form {
+    width: 300px;
+    padding: 16px;
+    border-radius: 10px;
+    margin-top: 150px;
+    margin-left: 600px;
+    background-color: #ccc;
+}
+
+
+    form label {
+        width: 72px;
+        font-weight: bold;
+        display: inline-block;
+    }
+
+
+    form input[type="text"],
+    form input[type="email"] {
+        width: 180px;
+        padding: 3px 10px;
+        border: 1px solid #f6f6f6;
+        border-radius: 3px;
+        background-color: #f6f6f6;
+        margin: 8px 0;
+        display: inline-block;
+    }
+
+
+    form input[type="submit"] {
+        width: 100%;
+        padding: 8px 16px;
+        margin-top: 32px;
+        border: 1px solid #000;
+        border-radius: 5px;
+        display: block;
+        color: #fff;
+        background-color: #000;
+    }
+
+    form input[type="submit"]:hover {
+        cursor: pointer;
+    }
+
+
+
+
+
